fix double images, add tablet version, fixed modile horizontal scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,15 +50,14 @@ body {
   }
 }
 
-@media (min-width: 641px) and (max-width: 1200px) {
-  .nav__list .buy__button,
-  .nav__list .lang__specs {
-    display: none;
-  }
 
-  .header .buy__button,
-  .header .lang__specs {
-    display: block;
+@media (min-width: 1200px) {
+  .header__img-med,
+  .third-block__img-med,
+  .forth-block__img-med,
+  .fifth-block__img-med,
+  .seventh-block__img-med {
+    display: none;
   }
 }
 
@@ -78,34 +77,252 @@ body {
 
 @media (min-width: 641px) and (max-width: 1200px) {
 
-  .header__img-mini {
-    display: none;
+  .global-gap {
+    gap: 140px;
+    align-items: normal;
   }
 
-  .third-block__img-mini {
-    display: none;
+  body {
+    padding: 0;
   }
 
-  .forth-block__img-mini {
-    display: none;
+  .header {
+    width: 600px;
   }
 
-  .fifth-block__img-mini {
-    display: none;
+  .first-block {
+    &__container {
+      gap: 30px;
+    }
+
+    &__container-tittle {
+      font-size: 48px;
+      line-height: 62px;
+    }
+
+    &__container-text {
+      font-size: 16px;
+    }
   }
 
-  .seventh-block__img-mini {
-    display: none;
+  .second-block {
+    justify-content: center;
+    align-items: center;
+    &__nav {
+      display: none;
+    }
+
+    &__cards {
+      width: 600px;
+      flex-wrap: wrap;
+    }
   }
 
-  .slide-controls {
+  .forth-block {
+    align-items: normal;
+    width: 100%;
+    gap: 0;
+    &__container {
+      width: 340px;
+      margin-left: 80px;
+    }
+
+    &__container-tittle {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    &__container-text {
+      font-size: 16px;
+      margin-bottom: 60px;
+    }
+  }
+
+  .fifth-block {
+    width: 100%;
+    position: relative;
+    justify-content: space-between;
+    gap: 0;
+    padding-left: 30px;
+    &__container {
+      width: 340px;
+    }
+
+    &__container-tittle {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    &__container-text {
+      font-size: 16px;
+      margin-bottom: 60px;
+    }
+
+    &__img-med {
+    }
+  }
+
+  .sixth-block {
+    align-items: center;
+    &__text {
+      width: 700px;
+    }
+  }
+
+  .seventh-block {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
+
+    .seventh-block__img {
+      display: none;
+    }
+
+    .seventh-block__img-med {
+      width: 430px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+
+    .seventh-block__img-mini {
+      width: 320px;
+      height: 174.8px;
+      position: absolute;
+      bottom: 0;
+      margin-left: -32px;
+    }
+
+    .seventh-block__container-card {
+      display: none;
+    }
+
+    .seventh-block__container-card.active {
+      display: block;
+    }
+
+    .seventh-block__tittle {
+      width: 260px;
+      margin-left: 30px;
+      font-size: 30px;
+      margin-bottom: 32px;
+    }
+
+    .seventh-block__container {
+      position: relative;
+      height: 570px;
+      flex-direction: column;
+      width: 100%;
+      padding-top: 60px;
+      padding-left: 90px;
+      overflow: hidden;
+    }
+
+    .seventh-block__container-card__tittle {
+      font-size: 20px;
+      font-weight: 700;
+      margin-left: -18px;
+    }
+
+    .card__list {
+      padding-left: 0;
+    }
+
+    .card__item {
+      font-size: 14px;
+      width: 230px;
+    }
+
+    .slide-controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: -50px;
+      position: absolute;
+      bottom: 22%;
+      left: 16%;
+      transform: translateX(-50%);
+      z-index: 1;
+    }
+
+    .slide-btns {
+      display: flex;
+      justify-content: center;
+      margin-top: -50px;
+    }
+
+    .slide-counter {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .current-slide {
+      font-size: 16px;
+      font-weight: 400;
+    }
+
+    .separator {
+      width: 4px;
+      height: 14px;
+      color: #0c797a;
+      font-size: 11px;
+    }
+
+    .total-slides {
+      color: #0c797a;
+      font-size: 11px;
+      font-weight: 400;
+    }
+  }
+
+  .eight-block {
+    padding-left: 20px;
+    &__tittle {
+      font-size: 36px;
+      width: 339px;
+    }
+
+    &__email {
+      width: 340px;
+      height: 48px;
+    }
+
+    &__message {
+      width: 340px;
+      height: 201px;
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+    height: 200px;
+  }
+
+  .logo-footer {
+    display: block;
+  }
+
+  .arrow {
+    right: 40px;
+  }
+
+  .header__img-mini,
+  .third-block__img-mini,
+  .forth-block__img-mini,
+  .fifth-block__img-mini,
+  .seventh-block__img-mini,
+  .header__img,
+  .third-block__img,
+  .forth-block__img,
+  .fifth-block__img {
     display: none;
   }
 
   .burger-menu {
     position: fixed;
     top: 20px;
-    right: 40px;
+    right: 150px;
     height: 4px;
     width: 25px;
     cursor: pointer;
@@ -123,7 +340,7 @@ body {
   .close-menu {
     position: fixed;
     top: 20px;
-    right: 30px;
+    right: 150px;
     z-index: 10000;
     display: none;
   }
@@ -201,14 +418,19 @@ body {
     display: block;
     width: 100%;
     padding: 25px 30px;
-    height: 150px;
+    height: 70px;
   }
 
   .header__img,
   .third-block__img,
   .seventh-block__img,
   .logo-footer,
-  .arrow {
+  .arrow,
+  .header__img1,
+  .third-block__img-med,
+  .forth-block__img-med,
+  .fifth-block__img-med,
+  .seventh-block__img-med {
     display: none;
   }
 
@@ -347,7 +569,7 @@ body {
       height: 174.8px;
       position: absolute;
       bottom: 0;
-      margin-left: -32px;
+      margin-left: 5%;
     }
 
     .seventh-block__container-card {
@@ -567,5 +789,31 @@ body {
   .second-block__nav-link {
     color: #000;
     text-decoration: none;
+  }
+}
+
+@media (min-width: 642px) and (max-width: 805px) {
+
+  .first-block {
+    justify-content: normal;
+  }
+
+  .first-block__container {
+    width: 270px;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .first-block__container-tittle {
+    font-size: 40px;
+    word-wrap: normal;
+    line-height: 50px;
+    width: 230px;
+  }
+
+  .first-block__container-text {
+    width: 230px;
+    font-size: 14px;
+    align-self: flex-end;
   }
 }
